welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: value ? is not a member of Int
while (dejafait?=nbpas){
               ^